Bug 509964 - No user feedback when adjusting rating or toggling tokens in the thumbnail view
Summary: No user feedback when adjusting rating or toggling tokens in the thumbnail view
Status: RESOLVED FIXED
Alias: None
Product: kphotoalbum
Classification: Applications
Component: Thumbnail Viewer (other bugs)
Version First Reported In: GIT master
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: KPhotoAlbum Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-09-26 15:12 UTC by Randall Rude
Modified: 2025-10-05 20:28 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.1.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Randall Rude 2025-09-26 15:12:05 UTC
The keyboard can be used to assign a rating (0-5 stars) and/or toggle a token on a selection.  There is no user feedback for these actions (unless View/Show Categories in Thumbnail Window is enabled, in which case a token change is visible).

The user can accidentally change ratings/tokens without noticing.

STEPS TO REPRODUCE
1. Load the demo.
2. Open the thumbnail view.
3. Select one or more thumbnails and press 3.
4. View the selected images to confirm they were assigned 3 stars.

OBSERVED RESULT

No user feedback.

EXPECTED RESULT

The user should be given some indication that the application state has changed.

SOFTWARE/OS VERSIONS
KPhotoAlbum: v6.0.1-233-g787feddd7-dirty
KDE Frameworks: 6.18.0
Qt: Using 6.9.2 and built against 6.9.2
Ubuntu 24.04.3 LTS (Xcb)
Build ABI: x86_64-little_endian-lp64
Kernel: linux 6.8.0-64-generic
Comment 1 Johannes Zarl-Zierl 2025-09-29 20:36:12 UTC
Git commit e1d42fb35019d3afd8507daed53b2946e7b5e52c by Johannes Zarl-Zierl.
Committed on 29/09/2025 at 20:35.
Pushed by johanneszarl into branch 'master'.

Provide visual feedback when setting rating in image view

Show a transient display when the rating is changed, just like when a
tag or token is changed.

M  +1    -0    CHANGELOG.md
M  +13   -1    Viewer/TransientDisplay.cpp
M  +8    -0    Viewer/TransientDisplay.h
M  +1    -0    Viewer/ViewerWidget.cpp

https://invent.kde.org/graphics/kphotoalbum/-/commit/e1d42fb35019d3afd8507daed53b2946e7b5e52c