Provide visual feedback when setting rating in image view

Show a transient display when the rating is changed, just like when a
tag or token is changed.

BUG: 509964